Add: bank resolving by available info feature

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 <body>
 
     <form th:action="@{/resolve}" method="get">
-        <input type="submit" value="Resolve some data">
+        <input type="submit" value="Data resolver" style="height:70px; width:200px;" size="80">
     </form>
 
 </body>
