--- a/src/main/resources/templates/resolverForm.html
+++ b/src/main/resources/templates/resolverForm.html
@@ -14,14 +14,13 @@
         <input type="text" name="ip">
         <br>
         <input type="submit" value="Get city">
-        <br>
     </form>
 
     <br>
     <br>
 
     <form th:action="@{/api/resolve/get_addr}" method="get" th:object="${coords}">
-        Coordinates<br>
+        Address by coordinates<br>
         <table>
             <tr>
                 <td>
@@ -36,6 +35,7 @@
         </table>
         <input type="submit" value="Get Address">
         <br>
+        <br>
     </form>
 
     <form th:action="@{/api/resolve/get_company}" method="get">
@@ -43,6 +43,16 @@
         <input type="text" name="query">
         <br>
         <input type="submit" value="Get company info">
+        <br>
+        <br>
+    </form>
+
+    <form th:action="@{/api/resolve/get_bank}" method="get">
+        Find bank by available info<br>
+        <input type="text" name="query">
+        <br>
+        <input type="submit" value="Get bank info">
+        <br>
         <br>
     </form>
 
