Add: domain interface for order delivery status

--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -23,12 +23,12 @@
                     <input type="text" name="deliveryEndDate">
                     <br>
                     Order state<br>
-                    <input type="text" name="state">
+                    <input type="text" name="orderState">
                     <br>
                     Order status<br>
                     <input type="text" name="orderStatus">
                     <br>
-                    Receiving region<br>
+                    Delivery region<br>
                     <input type="text" name="regionTo">
                     <br>
                     <input type="submit" value="Get order delivery status">
