Modify: to hell with dependency inversion when it is over-engineering

--- a/src/main/resources/templates/cdekOrderForm.html
+++ b/src/main/resources/templates/cdekOrderForm.html
@@ -5,7 +5,7 @@
       layout:decorate="~{layout.html}">
 <head>
     <meta charset="UTF-8">
-    <title>Order</title>
+    <title>Order (IML)</title>
 </head>
 <body>
     <table>
