--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,13 @@
     <form th:action="@{/resolve}" method="get">
         <input type="submit" value="Data resolver" style="height:70px; width:200px;" size="80">
     </form>
+    <br>
+    <form th:action="@{/order/iml}" method="get">
+        <input type="submit" value="IML delivery service" style="height:70px; width:200px;" size="80">
+    </form>
+    <form th:action="@{/order/cdek}" method="get">
+        <input type="submit" value="CDEK Delivery service" style="height:70px; width:200px;" size="80">
+    </form>
 
 </body>
 </html>
