Fix: there are multiple statuses

--- a/src/main/resources/templates/cdekOrderForm.html
+++ b/src/main/resources/templates/cdekOrderForm.html
@@ -43,52 +43,52 @@
                         <option th:value=63>Магистральный супер-экспресс склад-склад</option>
                     </select>
                     <br>
-                    sender.company<br>
+                    Sender company<br>
                     <input type="text" th:field="*{sender.company}">
                     <br>
-                    sender.name<br>
+                    Sender name<br>
                     <input type="text" th:field="*{sender.name}">
                     <br>
-                    sender.email<br>
+                    Sender email<br>
                     <input type="text" th:field="*{sender.email}">
                     <br>
-                    sender.phones[0].number<br>
+                    Sender phone number<br>
                     <input type="text" th:field="*{sender.phones[0].number}">
                     <br>
-                    recipient.name<br>
+                    Recipient name<br>
                     <input type="text" th:field="*{recipient.name}">
                     <br>
-                    recipient.phones[0].number<br>
+                    Recipient phone number<br>
                     <input type="text" th:field="*{recipient.phones[0].number}">
                     <br>
-                    fromLocation.countryCode<br>
+                    Origin location countryCode<br>
                     <input type="text" th:field="*{fromLocation.countryCode}">
                     <br>
-                    fromLocation.address<br>
+                    Origin location address<br>
                     <input type="text" th:field="*{fromLocation.address}">
                     <br>
-                    toLocation.countryCode<br>
+                    Delivery location countryCode<br>
                     <input type="text" th:field="*{toLocation.countryCode}">
                     <br>
-                    toLocation.address<br>
+                    Delivery location address<br>
                     <input type="text" th:field="*{toLocation.address}">
                     <br>
-                    packages[0].number<br>
+                    Package number<br>
                     <input type="text" th:field="*{packages[0].number}">
                     <br>
-                    packages[0].weight<br>
+                    Package weight<br>
                     <input type="text" th:field="*{packages[0].weight}">
                     <br>
-                    packages[0].length<br>
+                    Package length<br>
                     <input type="text" th:field="*{packages[0].length}">
                     <br>
-                    packages[0].width<br>
+                    Package width<br>
                     <input type="text" th:field="*{packages[0].width}">
                     <br>
-                    packages[0].height<br>
+                    Package height<br>
                     <input type="text" th:field="*{packages[0].height}">
                     <br>
-                    packages[0].comment<br>
+                    Package comment<br>
                     <input type="text" th:field="*{packages[0].comment}">
                     <br>
                     <input type="submit" value="Create the order">
